adding character.service

--- a/ud38-01/src/app/app.component.html
+++ b/ud38-01/src/app/app.component.html
@@ -1,16 +1,2 @@
-<app-navbar></app-navbar>
-<div class="container d-column">
-  <div class="container d-flex">
-    <app-character [characters]="characters[0]"></app-character>
-    <app-character [characters]="characters[1]"></app-character>
-    <app-character [characters]="characters[2]"></app-character>
-    <app-character [characters]="characters[3]"></app-character>
-  </div>
-  <div class="container d-flex">
-    <app-character [characters]="characters[4]"></app-character>
-    <app-character [characters]="characters[5]"></app-character>
-    <app-character [characters]="characters[6]"></app-character>
-    <app-character [characters]="characters[7]"></app-character>
-  </div>
-</div>
-
+<!-- <app-main></app-main> -->
+<router-outlet></router-outlet>
