--- a/ud38-01/src/app/character/character.component.html
+++ b/ud38-01/src/app/character/character.component.html
@@ -2,6 +2,8 @@
   <div class="morty mt-3">
     <img class="image" src="{{image}}" alt="{{name}}">
     <h6 class="text txt-nombre">{{name}}</h6>
-    <button type="button" class="col-10 btn btn-warning btn-sm m-1">See more</button>
-  </div>
+    <button type="button" class="col-10 btn btn-warning btn-sm m-1" routerLink="/character/{{ character.id }}">
+      See more
+    </button>
+    </div>
 </div>
