--- a/ud38-01/src/app/main/main.component.html
+++ b/ud38-01/src/app/main/main.component.html
@@ -1,1 +1,16 @@
-<p>main works!</p>
+<!-- <app-navbar></app-navbar> -->
+<!-- <div class="container d-column"> -->
+  <div class="container d-flex">
+    <app-character [character]="characters[0]"></app-character>
+    <app-character [character]="characters[1]"></app-character>
+    <app-character [character]="characters[2]"></app-character>
+    <app-character [character]="characters[3]"></app-character>
+  </div>
+  <div class="container d-flex">
+    <app-character [character]="characters[4]"></app-character>
+    <app-character [character]="characters[5]"></app-character>
+    <app-character [character]="characters[6]"></app-character>
+    <app-character [character]="characters[7]"></app-character>
+  </div>
+<!-- </div> -->
+<!-- <app-character></app-character> -->
